# google-paystack-api

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 50d12666166d_initial_migrations.py  7e6df606d708_initial_migrations.py  a5e268a123ad_initial_migrations.py  b0c06c4f338c_add_email_field_to_transactions_table.py  d2f873264907_initial_migrations.py
app/: main.py
app/api_routers/: v1.py
app/features/api_keys/models/: __init__.py  api_key.py
app/features/api_keys/routes/: __init__.py  api_key_routes.py
app/features/api_keys/schemas/: __init__.py  api_key.py
app/features/api_keys/services/: __init__.py  api_key_service.py
app/features/auth/models/: __init__.py  user.py
app/features/auth/routes/: auth_routes.py
app/features/auth/schemas/: __init__.py  auth.py
app/features/auth/services/: auth_service.py
app/features/payments/models/: __init__.py  transaction.py
app/features/payments/routes/: paystack.py
app/features/payments/schemas/: __init__.py  payment.py
app/features/payments/services/: paystack_service.py  transaction_service.py
app/features/payments/utils/: helpers.py
app/features/wallet/models/: __init__.py  wallet.py
app/features/wallet/routes/: __init__.py  wallet_routes.py
app/features/wallet/schemas/: __init__.py  wallet.py
app/platform/auth/: dependencies.py  jwt_service.py
app/platform/config/: settings.py
app/platform/db/: __init__.py  base.py
app/platform/response/: schemas.py
tests/: test_auth.py  test_health.py  test_payments.py
(+3 files in other folders)
